Fix overflow issue on mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,6 @@ body {
 
 #top-header {
   margin-top: 20px;
-  font-size: 3rem;
 }
 
 header a {
@@ -24,8 +23,7 @@ span.siteName a {
 #tools a {
   transform: translate(-4px, -30px);
   text-transform: uppercase;
-  font-size: 16px;
-  margin-right: 30px;
+  font-size: 12px;
 }
 
 nav {
@@ -34,33 +32,16 @@ nav {
   margin-top: 2rem;
 }
 
-nav ul {
+nav a {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul, .hero ul {
   display: flex;
   list-style-type: none;
   justify-content: space-evenly;
   padding: 1rem 0;
-  background-color: #1a1a1a; /* Color de fondo oscuro */
-}
-
-nav ul li {
-  padding: 10px 15px;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.2rem;
-  padding: 10px 15px;
-  display: block;
-}
-
-nav ul li:hover {
-  background-color: white;
-}
-
-nav ul li:hover a {
-  color: black;
 }
 
 main {
